--- a/xunibowuguan.plist
+++ b/xunibowuguan.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>http://xxx/xxx.ipa</string>
+                    <string>https://github.com/qimuya3/XuNiBoWuGuan/master/LDXuNiBoWuGuan.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
